--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,11 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:2.0.0-beta1'
     implementation 'org.jetbrains.anko:anko-commons:0.10.4'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'org.jetbrains.anko:anko-sdk25:0.10.4'
+    implementation 'org.jetbrains.anko:anko-appcompat-v7:0.10.4'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'org.jetbrains.anko:anko-cardview-v7:0.10.4'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 
     testImplementation 'junit:junit:4.13-beta-3'
 
